Changed for WPML not getting correct lang from url - FIXED
Predefined custom fields section added to place settings - ADDED
Search bar styles change (to use original GD>Design>Search>Use old non-styled form) - STYLE BREAKING CHANGE
Firefox marker title hover fails on multiple repeat hovers - FIXED
If multiple CPT but only one has posts then search CPT switcher will not show - CHANGED

v1.6.8
Address field output containd class post instead of post_address - FIXED
Video and special offers tabs can show twice - FIXED
Custom field position change function sometimes not run - FIXED
Multiselect custom field can now be show as comma separated by adding class `gd-comma-list` - ADDED
With Avada theme "GD Home Top Section" widgets dont work on GD Home page - FIXED

v1.6.7
Original custom fields hook htmlvar broken - FIXED
Default custom fields not able to show in custom tab - FIXED
Function added to convert date formats - ADDED
Checkbox custom field can fail to show if previously set as own tab - FIXED

v1.6.6
Added filter to geodir_filter_empty_terms function - ADDED
Best of widget not showing lazyload images on ajax change - FIXED
Added action hooks to login widget for social buttons - ADDED
Changed the way fullscreen map works for more compatibility - CHANGED
Mouse scroll zoom control setting not working for OpenStreetMap - FIXED
Popular post view widget -> "Post Type:" setting not working on CPT pages - FIXED
Responsive video shortcode - ADDED
Claim listing error message incorrect class - FIXED
Address field not showing the same on prview page - FIXED
Options added in CPT categories widget to disable viewing post type & category filters - ADDED
Server side marker clustering not working with OpenStreetMap - FIXED
BuddyPress admin bar not availble for non admin users - FIXED
Fixed map marker title special characters encoding - FIXED
Let popup forms template override from theme - FIXED
Added a filter to modify My Dashboard widget title - ADDED